--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="NAME_OF_YOUR_PROJECT" default="build" basedir=".">
+<project name="Unit training test" default="build" basedir=".">
   <property name="basedir" value="${WORKSPACE}"/>
   
   <target name="init">
