Correct composer command, hopefully.

--- a/build.xml
+++ b/build.xml
@@ -26,9 +26,12 @@
   <target name="build" depends="init,phpunit" />
   
   <target name="phpunit">
-    <exec executable="curl" dir="${basedir}">
-      <arg line="-s http://getcomposer.org/installer | php" />
+    
+    <exec executable="/bin/bash">
+        <arg value="-c" />
+        <arg value="curl -s https://getcomposer.org/installer | php" />
     </exec>
+    
     <exec executable="php">
       <arg line="composer.phar install --dev" />
     </exec>
